--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "bootstrap": "^5.1.1",
+    "express": "^4.17.1",
+    "node-mandrill": "^1.0.1",
+    "reactstrap": "^8.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
